[gd_scene load_steps=2 format=3 uid="uid://oci7xuyj8k7q"]

[ext_resource type="Script" path="res://scenes/ui/subtitle_layer.gd" id="1_l0qle"]

[node name="SubtitleLayer" type="CanvasLayer"]
script = ExtResource("1_l0qle")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer2" type="CenterContainer" parent="Background"]
layout_mode = 2
offset_top = 426.0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.27

[node name="SubtitleLabel" type="Label" parent="Background/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.55

[node name="CinematicLabel" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
